# cuda_cpp_cross_compile

./: CMakeLists.txt  README.md  main.cpp
cuda/: CMakeLists.txt  vectorAdd.cu  vectorAdd.cuh
